--- a/Samples/BusinessApp/src/public/BUSINESS_APP/src/components/splitter/splitter.scss
+++ b/Samples/BusinessApp/src/public/BUSINESS_APP/src/components/splitter/splitter.scss
@@ -47,6 +47,7 @@
 }
 
 .documentsList__splitter__wrapper {
+  border: 0;
   display: flex;
   flex-direction: row;
   height: 100%;
@@ -63,7 +64,6 @@
   }
 
   .leftPane {
-    transition: overflow 1s;
     overflow: initial !important;
   }
 }
